--- a/core/templates/core/hombre.html
+++ b/core/templates/core/hombre.html
@@ -95,7 +95,7 @@
             <section class="products-list">
 				<div class="product-item" category="pantalon">
 					<img src="{% static 'core/img/catalogo man/pantalon_blanco.jpg' %}" alt="" >
-					<a href="#">Pantalón Negro
+					<a href="{% url 'plantillaRopa' %}">Pantalón Negro
                                 <br>
                                 $10.990
                     </a>
