--- a/core/templates/core/plantillaRopa.html
+++ b/core/templates/core/plantillaRopa.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="{% static 'core/css/catalogo.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="js/jquery.flexslider.js"></script>
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/script.js"></script>
+    <script src="{% static 'core/js/jquery.flexslider.js' %}"></script>
+    <script src="{% static 'core/js/jquery-3.2.1.js' %}"></script>
+    <script src="{% static 'core/js/script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <title>Look's® Chile</title>
@@ -20,7 +20,7 @@
 </head>
 <body class="fondo">
     <div class="logo">
-        <center><h4> <img src="{% static 'core/img/logo look2.png' %}}" height="30" alt="CoolBrand"> Look's</h4></center>
+        <center><h4> <img src="{% static 'core/img/logo look2.png' %}" height="30" alt="CoolBrand"> Look's</h4></center>
     </div>
     <nav>
         <ul class="menu">
