--- a/core/templates/core/registro.html
+++ b/core/templates/core/registro.html
@@ -118,12 +118,12 @@
       <form action="home.html" name="formulario_contacto" id="formulario_registro">
         <div class="user-details">
           <div class="input-box">
-            <span class="details"><label for="nombre_completo">Nombre Completo</label></span>
+            <span class="details"><label for="nombre_completo">Nombre y Apellido</label></span>
             <input type="text" name="nombre_completo" id="nombre_completo" placeholder="Ingrese su nombre">
           </div>
           <div class="input-box">
-            <span class="details"><label for="apodo">Apodo</label></span>
-            <input type="text" name="apodo" id="apodo" placeholder="Ingrese su Apodo" required>
+            <span class="details"><label for="apodo">RUT</label></span>
+            <input type="text" name="apodo" id="apodo" placeholder="11111111-1" required>
           </div>
           <div class="input-box">
             <span class="details"><label for="correo">Correo Electrónico</label></span>
