--- a/core/templates/core/listarproductos.html
+++ b/core/templates/core/listarproductos.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="{% static 'core/js/jquery.flexslider.js' %}"></script>
     <link rel="icon" href="{% static 'core/img/logo look2.png' %}" type="image/png"/>
-    <title>Recuperar Contraseña</title>
+    <title>Listado de Productos</title>
 </head>
 <body>
     <div class="logo">
@@ -75,29 +75,47 @@
         document.addEventListener("click", closeSubmenu, false);
     </script>
     <!--MENU BAR FIN-->
-    <!--RECUPERACIÓN DE CONTRASEÑA-->
 
-    <div class="contenedor">
-            <div class="title">¿Olvidaste tu contraseña?</div>
-            <br>
-            <p>¡No te preocupes! Ingresa tu correo electrónico para que podamos ayudarte a recuperarla.</p>
-            <div class="content">
-              <form action="correorecu.html" name="formulario_recuperacion" id="formulario_clave">
-                <div class="user-details">
-                  <div class="input-box">
-                    <span class="details"><label for="correo">Correo Electrónico</label></span>
-                    <input type="email" name="correo" id="correo" placeholder="look@gmail.com" >
-                  </div>
-                  <div class="input-box">
-                    <div id="error" class="alerta"></div>
-                  <button type="submit" class="boton">Enviar</button>
-                </div>
-            </div>
-              </form>
-            </div>
+    <!-- SECTION -->
+    <div class="form-group">
+        <a class="button" href="">Agregar Producto</a>
     </div>
 
-    <!--FIN RECUPERACIÓN DE CONTRASEÑA-->
+        <div class="row">
+            {% if messages %}
+            <div>
+                {% for i in messages %}
+                    <p>{{ i }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+            <table class="table table-dark">
+                <thead class="thead-dark">
+                    <tr>
+                        <td>ID Producto</td>
+                        <td>Nombre Producto</td>
+                        <td>Stock</td>
+                        <td>Talla</td>
+                        <td>Modificar Producto</td>
+                        <td>Eliminar Producto</td>
+                    </tr>
+                    {% for r in producto %}
+                    <tr>
+                        <td>{{ r.idProducto }}</td>
+                        <td>{{ r.nProducto }}</td>
+                        <td>{{ r.stock }}</td>
+                        <td>{{ r.talla }}</td>
+                        <td><a href="">Modificar</a></td>
+                        <td><a href="">Eliminar</a></td>
+                    </tr>
+                    {% endfor %}
+                </thead>
+            </table>
+        </div>
+
+    <!-- /SECTION -->
+
+
     <!--FOOTER-->
     <section id="info">
             <footer>
