--- a/core/templates/core/modificarRopa.html
+++ b/core/templates/core/modificarRopa.html
@@ -7,20 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/nosotros.css' %}">
     <script src="{% static 'core/js/jquery.flexslider.js' %}"></script>
     <script src="{% static 'core/js/jquery-3.2.1.js' %}"></script>
     <script src="{% static 'core/js/script.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    <title>Listado</title>
+    <title>Nosotros</title>
     <link rel="icon" href="{% static 'core/img/logo look2.png' %}" type="image/png"/>
 	<script type="text/javascript" charset="utf-8"></script>
 </head>
-
 <body class="fondo">
     <div class="logo">
-        <center>
-            <h4> <img src="{% static 'core/img/logo look2.png' %}" height="30" alt="CoolBrand"> Look's</h4>
-        </center>
+        <center><h4> <img src="{% static 'core/img/logo look2.png' %}" height="30" alt="CoolBrand"> Look's</h4></center>
     </div>
     <nav>
         <ul class="menu">
@@ -29,12 +27,11 @@
             <li class="item"><a href="{% url 'mujer' %}">Mujer</a></li>
             <li class="item"><a href="{% url 'nosotros' %}">Nosotros</a></li>
             <li class="item"><a href="{% url 'contactanos' %}">Contáctanos</a></li>
-            <li class="item"><a href="{% url 'ayudanos' %}">Ayúdanos</a></li>
             <li class="item"><a href="{% url 'iniciosesion' %}">Login</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
-    
+
     <script>
         const toggle = document.querySelector(".toggle");
         const menu = document.querySelector(".menu");
@@ -81,37 +78,43 @@
         }
         document.addEventListener("click", closeSubmenu, false);
     </script>
+    
     <!--MENU BAR FIN-->
 
-    <div class="container">
+    <div class="contiene">
         <div class="row">
-            <h1>Listado</h1>
+            <form action="" id="form_register" method="POST">
+                <div class="form-group">
+                    <label for="rut">Número de Documento: </label>
+                    <input class="form-control" type="number" id="rut" name="rut" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="paterno">Apellido Paterno</label>
+                    <input class="form-control" type="text" id="paterno" name="paterno" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="materno">Apellido Materno</label>
+                    <input class="form-control" type="text" id="materno" name="materno" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class= "form-control" type="email" id="email" name="email" required> 
+                </div>
+
+                <div class="form-group">
+                    <label for="telefono"></label>
+                    <input type="tel" clasS="form-control" type="telefono" id="telefono" name="telefono" required>
+                </div> 
+            </form>
+
         </div>
 
-        <div class="row">
-            <table>
-                <tr>
-                    <td>Numero de Documento</td>
-                    <td>Nombre</td>
-                    <td>Apellido Paterno</td>
-                    <td>Apellido Materno</td>
-                    <td>Correo</td>
-                    <td>Phone</td>
-                    <td>Contraseña</td>
-                </tr>
-                {% for m in usuario %}
-                <tr>
-                    <td>{{ m.nDocumento }}</td>
-                    <td>{{ m.nombre }}</td>
-                    <td>{{ m.appaterno }}</td>
-                    <td>{{ m.apmaterno }}</td>
-                    <td>{{ m.email }}</td>
-                    <td>{{ m.telefono }}</td>
-                    <td>{{ m.password }}</td>
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
     </div>
-</body>
-</html>
