--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -343,6 +343,10 @@ a {
   cursor: pointer;
 }
 
+.section{
+  min-height: calc(100vh - 100px - 300px);
+}
+
 .button1 {
   background-color: black;
   color: white; 
