--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -141,6 +141,7 @@
     <!--CIERRE FOLLOW US-->
 
     <!--FOOTER CON MANTENTE EN CONTACTO-->
+<footer>
     <section id="info">
         <footer>
             <br>
@@ -160,6 +161,7 @@
         </footer>
     </section>
     <!--CIERRE FOOTER-->
+</footer>
 </body>
 
 </html>
